2010-05-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Reposition less, and also less frequently.

	* b-grok.c (grok_resynch): Don't
	take ‘struct fro *f’; don't reposition.
	(grok_all): Update call to ‘grok_resynch’.
	* b-grok.h (grok_resynch): Update func decl.
	* ci.c (main): Don't reposition prior to
	resync; update call to ‘grok_resynch’.
	* rcs.c (scanlogtext): Do reposition after looping.
	* rcsfnms.c (pairnames): Don't reposition after grok.
	* rcsgen.c (scandeltatext): Do reposition after looping.

2010-05-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Mark verbatim region; reduce transitional tell/seek.

	* b-fro.h (struct fro): Add member ‘verbatim’.
	(FIXUP_OLD): Delete macro.
	(VERBATIM, IGNORE_REST, SAME_AFTER): New macros.
	* b-fro.c (fro_spew): Use ‘->verbatim’ for region
	beginning; afterwards, set it to the end position.
	* base.h: Comment munging; nfc.
	* ci.c (main): Use ‘IGNORE_REST’, ‘SAME_AFTER’, ‘VERBATIM’.
	* co.c (main): Use ‘SAME_AFTER’.
	* rcs.c (scanlogtext): Don't call ‘FIXUP_OLD’.
	(main): Use ‘IGNORE_REST’, ‘SAME_AFTER’.
	* rcsclean.c (main): Use ‘SAME_AFTER’.
	* rcsedit.c (copystring): Don't call ‘FIXUP_OLD’.
	* rcsgen.c (scandeltatext, write_desc_maybe, putdesc): Likewise.
	* rlog.c (main): Likewise.
	* yarrrr.c [TEST_REV] (yarrrr): Likewise.

2010-05-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Rename ‘struct delta’ member ‘next’ to ‘ilk’.

	* base.h (struct delta): Rename member ‘next’ to ‘ilk’.
	* b-grok.c (full): Update references.
	* ci.c (addbranch, addelta): Likewise.
	* rcs.c (branchpoint, removerevs, buildtree): Likewise.
	* rcsgen.c (putdelta, puttree): Likewise.
	* rcsrev.c (genbranch, genrevs): Likewise.
	* rlog.c (putrunk, putree, putabranch)
	(exttree, recentdate, extdate): Likewise.
	* yarrrr.c [TEST_GROK] (yarrrr): Likewise.

2010-05-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int y-GROK] Fix bug: Deref repo ‘locks’ entry correctly.

	Regression introduced 2010-05-24, "Rewrite parsing".